# regscan

./: .gitignore  Cargo.toml  LICENSE  README.md
src/: main.rs  scanner.rs  util.rs
src/scanner/: ntuser.rs  sam.rs  software.rs  system.rs
src/scanner/ntuser/: gpo_history.rs  logonscripts.rs  ntuser_gpo_history.rs  ntuser_gpohistory.rs  ntuser_run.rs  putty.rs  runmru.rs  sevenzip.rs  sysinternals.rs
src/scanner/software/: defender.rs  gpo_history.rs  initial.rs  software_gpo_history.rs  software_gpohistory.rs  software_run.rs  startupscripts.rs  taskcache.rs
src/scanner/system/: initial.rs  portproxy.rs  services.rs  wdigest.rs
